fix poster issue and i18n issue

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -47,7 +47,7 @@
     "ECOSYSTEM_ITEM_3": "To revolutionarily lower the standard for participation in mining; to establish an overall blockchain ecosystem.",
 
     "TITLE_DEV_PLAN": "The Development Planning for Descartes Chain",
-    "DEV_PLAN_01_DATE": "June, 2017",
+    "DEV_PLAN_01_DATE": "March, 2017",
     "DEV_PLAN_01_GOAL": "The project and development teams of Descartes Chain were set up and the projects of Descartes Chain stepped into the stage of planning and preparation.",
 
     "DEV_PLAN_02_DATE": "October 2nd, 2017",
@@ -65,7 +65,7 @@
     "DEV_PLAN_06_DATE": "May 30th, 2018",
     "DEV_PLAN_06_GOAL": "Descartes software and hardware products were officially in the stage of research, development and production; the closed tests for the official website of Descartes Chain was operated.",
 
-    "DEV_PLAN_07_DATE": "June 26th, 2018",
+    "DEV_PLAN_07_DATE": "July 2nd, 2018",
     "DEV_PLAN_07_GOAL": "The international website of Descartes Chain was launched online; the project intelligent ecosystem/white paper was published; the worldwide advance sale for some open source of Descartes Chain and mining machines was started.",
 
     "DEV_PLAN_08_DATE": "September, 2018",
