--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -47,35 +47,35 @@
 
     "TITLE_DEV_PLAN": "发展规划",
     "DEV_PLAN_01_DATE": "2017.3",
-    "DEV_PLAN_01_GOAL": "融云链项目组及研发团队组建完毕<br>笛卡尔项目进入筹划阶段",
+    "DEV_PLAN_01_GOAL": "融云链项目组及研发团队组建完毕 笛卡尔项目进入筹划阶段",
     "DEV_PLAN_02_DATE": "2017.10.2",
-    "DEV_PLAN_02_GOAL": "笛卡尔链基础模块测试<br>反ASIC技术融合测试",
+    "DEV_PLAN_02_GOAL": "笛卡尔链基础模块测试 反ASIC技术融合测试",
     "DEV_PLAN_03_DATE": "2018.3.21",
-    "DEV_PLAN_03_GOAL": "智能合约组件测试<br>亚太地区项目运营开发团队成立，着手亚太市场",
+    "DEV_PLAN_03_GOAL": "智能合约组件测试 亚太地区项目运营开发团队成立，着手亚太市场",
     "DEV_PLAN_04_DATE": "2018.5.3",
-    "DEV_PLAN_04_GOAL": "乌克兰金融牌照正式审批通过<br>乌克兰金币交易有限公司成立",
+    "DEV_PLAN_04_GOAL": "乌克兰金融牌照正式审批通过 乌克兰金币交易有限公司成立",
     "DEV_PLAN_05_DATE": "2018.5.18",
-    "DEV_PLAN_05_GOAL": "笛卡尔与六道科技以及吉田资本签署亚太合作协议<br>笛卡尔链V1.0版本开始测试 ",
+    "DEV_PLAN_05_GOAL": "笛卡尔与六道科技以及吉田资本签署亚太合作协议 笛卡尔链V1.0版本开始测试 ",
     "DEV_PLAN_06_DATE": "2018.5.30",
-    "DEV_PLAN_06_GOAL": "笛卡尔软硬件产品正式进入研发制作阶段<br>笛卡尔融云链官方网站内部测试",
+    "DEV_PLAN_06_GOAL": "笛卡尔软硬件产品正式进入研发制作阶段 笛卡尔融云链官方网站内部测试",
     "DEV_PLAN_07_DATE": "2018.7.2",
-    "DEV_PLAN_07_GOAL": "笛卡尔融云链国际官网上线<br>项目智慧生态系统/白皮书进行公示<br>笛卡尔融云链部分开源、首期矿机全球预售开启",
+    "DEV_PLAN_07_GOAL": "笛卡尔融云链国际官网上线 项目智慧生态系统/白皮书进行公示 笛卡尔融云链部分开源、首期矿机全球预售开启",
     "DEV_PLAN_08_DATE": "2018.9",
-    "DEV_PLAN_08_GOAL": "笛卡尔主链矿机首批量产完成正式发售<br>笛卡尔搭配钱包同步上线",
+    "DEV_PLAN_08_GOAL": "笛卡尔主链矿机首批量产完成正式发售 笛卡尔搭配钱包同步上线",
     "DEV_PLAN_09_DATE": "2018.11",
-    "DEV_PLAN_09_GOAL": "笛卡尔融云链Token登陆国际数字货币交易所<br>(火币、中币、比特儿等)",
+    "DEV_PLAN_09_GOAL": "笛卡尔融云链Token登陆国际数字货币交易所 (火币、中币、比特儿等)",
     "DEV_PLAN_10_DATE": "2019.1",
-    "DEV_PLAN_10_GOAL": "笛卡尔百家创世区块搭建完成<br>笛卡尔主链开源代码官网公示",
+    "DEV_PLAN_10_GOAL": "笛卡尔百家创世区块搭建完成 笛卡尔主链开源代码官网公示",
     "DEV_PLAN_11_DATE": "2019.3",
-    "DEV_PLAN_11_GOAL": "笛卡尔区块链浏览器、区块链钱包、数字货币商城正式上线<br>笛卡尔线上应用矩阵初步完成",
+    "DEV_PLAN_11_GOAL": "笛卡尔区块链浏览器、区块链钱包、数字货币商城正式上线 笛卡尔线上应用矩阵初步完成",
     "DEV_PLAN_12_DATE": "2019.5",
-    "DEV_PLAN_12_GOAL": "笛卡尔数字平台进入开发阶段<br>笛卡尔去中心化交易所正式上线",
+    "DEV_PLAN_12_GOAL": "笛卡尔数字平台进入开发阶段 笛卡尔去中心化交易所正式上线",
     "DEV_PLAN_13_DATE": "2019.10",
-    "DEV_PLAN_13_GOAL": "笛卡尔融云链首个线下应用“数付卡”完成开发<br>实现全球商户应用落地与全球无国家数字货币通兑",
+    "DEV_PLAN_13_GOAL": "笛卡尔融云链首个线下应用“数付卡”完成开发 实现全球商户应用落地与全球无国家数字货币通兑",
     "DEV_PLAN_14_DATE": "2019.11",
-    "DEV_PLAN_14_GOAL": "笛卡尔数字平台上线测试，开通BTC/ETH交易对<br>开通笛卡尔数字货币借贷业务",
+    "DEV_PLAN_14_GOAL": "笛卡尔数字平台上线测试，开通BTC/ETH交易对 开通笛卡尔数字货币借贷业务",
     "DEV_PLAN_15_DATE": "2019.12",
-    "DEV_PLAN_15_GOAL": "完成百条侧链接驳<br>完整智慧生态系统架构完成",
+    "DEV_PLAN_15_GOAL": "完成百条侧链接驳 完整智慧生态系统架构完成",
 
 
     "FINISHED" : "已完成部分",
