--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -119,7 +119,7 @@
     "PRODUCT_MODEL": "x1",
     "PRODUCT_INTRO": "第一代高性能笛卡尔矿机",
     "PRODUCT_PRICE": "￥11999",
-    "PRODUCT_ORDER": "立即预约",
+    "PRODUCT_ORDER": "立即购买",
 
     "PRODUCT_PART_01_TITLE_01": "澎湃动力",
     "PRODUCT_PART_01_INTRO_01": "企业级4核CPU   64位处理器",
@@ -149,8 +149,8 @@
     "CART_PRICE": "价格",
     "CART_QUANTITY": "数量",
     "CART_AMOUNT": "总价",
-    "CART_PRODUCT_NAME":"第一代高性能笛卡尔矿机",
-    "CART_PRODUCT_INTRO":"第一代高性能笛卡尔矿机,第一代高性能笛卡尔矿机",
+    "CART_PRODUCT_NAME":"DCAR X1",
+    "CART_PRODUCT_INTRO":"第一代高性能笛卡尔矿机",
     "CART_ADD_ADDRESS": "添加收货地址",
     "CART_RECEIVER_NAME": "收货人姓名",
     "CART_RECEIVER_PHONE": "收货人电话",
