--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,5 +1,5 @@
 {
-    "TITLE": "笛卡尔融云联",
+    "TITLE": "笛卡尔融云链",
     "HOME": "主页",
     "MINER": "矿机",
     "APPLICATIONS": "应用场景",
@@ -8,7 +8,7 @@
     "TEAM" : "团队",
     "SIGNIN" : "登录",
     "SIGNUP" : "注册",
-    "PROJECT_NAME": "笛卡尔融云联",
+    "PROJECT_NAME": "笛卡尔融云链",
     "SLOGON": "全球首个数字金融的通用超级银关",
     "WHITE_PAPER": "白皮书",
     "TOKEN_WALLET": "Token 钱包",
@@ -180,8 +180,38 @@
     "SIGNIN_REMEMBER_ME": "记住我",
     "SIGNIN_LOGIN": "登录",
     "SIGNIN_REGISTER": "注册",
+    
+
+    "PAGE_SIGNUP": "------------------------- PAGE SIGNUP ----------------------------",
+    "SIGNUP_TITLE": "注册",
+    "SIGNUP_USERNAME": "昵称",
+    "SIGNUP_EMAIL": "邮箱",
+    "SIGNUP_PHONE": "电话号码",
+    "SIGNUP_PASSWORD": "密码",
+    "SIGNUP_CONFIRM_PASSWORD": "确认密码",
+    "SIGNUP_REGISTER": "注册",
+    "SIGNUP_LGOIN": "登录",
     "FORGET_PASSWORD": "忘记密码？",
 
+    "PAGE_PROFILE": "------------------------- PAGE PROFILE ----------------------------",
+    "PROFILE_MENU_ORDERS": "订单",
+    "PROFILE_MENU_VOUCHERS": "兑换码",
+    "PROFILE_MENU_ADDRESSES": "地址",
+    "PROFILE_MENU_SETTINGS": "设置",
+    "PROFILE_MENU_SIGNOUT": "注销",
+
+    "PROFILE_ORDER_UNPAIED":"未支付",
+    "PROFILE_ORDER_UNFINISHED": "未完成",
+    "PROFILE_ORDER_FINISHED":"已完成",
+    "PROFILE_ORDER_QUANTITY":"数量",
+    "PROFILE_ORDER_AMOUNT":"总价",
+    "PROFILE_VOUCHERS": "你的兑换码",
+    "PROFILE_VOUCHERS_STATUS":"状态",
+    "PROFILE_ADD_VOUCHER":"添加兑换码",
+    "PROFILE_RECEIVER": "收货人",
+    "PROFILE_RECEIVER_PHONE": "收货人电话",
+    "PROFILE_RECEIVER_ADDRESS": "收货地址",
+    "PROFILE_RECEIVER_SUBMIT": "提交",
 
 
     "COPYRIGHT_PART_A": "Copyright © 2018.  ",
