--- a/i18n/en.json
+++ b/i18n/en.json
@@ -172,7 +172,7 @@
 
     "CART_MODAL_ADD_ADDRESS": "Add Shipping Address",
     "CART_MODAL_RECEIVER_NAME": "Receiver",
-    "CART_MODAL_RECEIVER_PHONE": "Receiver Name",
+    "CART_MODAL_RECEIVER_PHONE": "Receiver Phone",
     "CART_MODAL_RECEIVER_ADDRESS": "Receiver Address",
     "CART_MODAL_SUBMIT": "Submit",
 
