--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -117,8 +117,8 @@
 
     "PRODUCT_NAME": "DCAR Miner",
     "PRODUCT_MODEL": "x1",
-    "PRODUCT_INTRO": "第一代高性能笛卡尔矿机",
-    "PRODUCT_PRICE": "￥11999",
+    "PRODUCT_INTRO": "First generation high performance cartesian mining machine",
+    "PRODUCT_PRICE": "$1820",
     "PRODUCT_ORDER": "立即购买",
 
     "PRODUCT_PART_01_TITLE_01": "澎湃动力",
