--- a/i18n/en.json
+++ b/i18n/en.json
@@ -231,6 +231,8 @@
 
 
 
+    "PAGE_PROMPT": "Prompt",
+
     "COPYRIGHT_PART_A": "Copyright © 2018. All rights reserved. Designed & developed by ",
     "COPYRIGHT_PART_B": "Decartes Chain"
 }
