--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -217,6 +217,8 @@
     "PROFILE_RECEIVER_ADDRESS": "收货地址",
     "PROFILE_RECEIVER_SUBMIT": "提交",
 
+    "PAGE_PROMPT": "提示",
+
 
     "COPYRIGHT_PART_A": "Copyright © 2018.  ",
     "COPYRIGHT_PART_B": "笛卡尔融云链 版权所有"
